--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -17,7 +17,7 @@
 }
 
 #profile-card {
-  width: 50%;
+  /* width: 150vh; */
   margin: 0 auto;
 }
 
